panel spacing corrected

--- a/src/app/main/components/nv-user-list-view/nv-user-list-view.component.scss
+++ b/src/app/main/components/nv-user-list-view/nv-user-list-view.component.scss
@@ -321,3 +321,27 @@
   .userListHeight {
     overflow: hidden;
   }
+
+  .base-panel-wdh{
+    padding: 16px 16px 0px 16px !important;
+  }
+
+  .panel-wdh-1{
+    padding-left:0px !important;
+    padding-right:0px !important;
+  }
+
+  .panel-wdh-2{
+    padding-left:8px !important;
+    padding-right:0px !important;
+  }
+
+  .panel-wdh-3{
+    padding-left:8px !important;
+    padding-right:0px !important;
+  }
+
+  .panel-wdh-4{
+    padding-left:8px !important;
+    padding-right:0px !important;
+  }
